--- a/src/smes.css
+++ b/src/smes.css
@@ -152,7 +152,7 @@ body {
 
 .update-message {
     position: absolute;
-    bottom: 30px;
+    bottom: 110px;
     left: 10px;
     z-index: 1;
     background: rgba(0, 0, 0, 0.75);
@@ -172,6 +172,70 @@ body {
 }
 .update-countdown-value {
     margin-left: 10px;
+}
+
+.snack-wrap {
+  display: block;
+  position: fixed;
+  bottom: 0px;
+  left:5px;
+  padding: 0px;
+}
+
+.snackbar {
+  display: block;
+  background: rgba(0, 0, 0, 0.75);
+  border: solid 1px rgba(255, 255, 255, 0.7);
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px rgba(108, 107, 107, 0.7);
+  padding: 14px 24px 14px 24px;
+  color:#fff;
+  text-align: center;
+  font-family: Arial;
+  position: relative;
+  left: inherit;
+  bottom: -70px;
+  transition: bottom 0.5s ease-in-out;
+  z-index: 9;
+} 
+.snackclose, label {
+  bottom: -70px;
+  position: absolute;
+  border: 0;
+}
+.snackclose {
+  display: none;
+  z-index: 10;
+}
+label {
+  z-index: 11;
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: rgba(255,255,255,0.8);
+  cursor: pointer;
+}
+.animated {
+  animation-name: snackbar-show;
+  animation-duration: 1s;
+  animation-direction: forwards;
+  animation-timing-function: ease-in-out;
+  animation-delay: 1s;
+  animation-fill-mode: forwards;
+}
+.snackclose:checked~.snackbar, .snackclose:checked, .snackclose:checked+label {
+  animation-name: snackbar-hide;
+  animation-delay: 0s;
+}
+@keyframes snackbar-show {
+   0%{ bottom: -70px; left: inherit; }
+  90%, 95% {bottom: 15px; left: inherit; }
+  92.5%, 100% {bottom: 30px; left: inherit; }
+} 
+@keyframes snackbar-hide {
+   0%, 7.5% {bottom: 10px; left: inherit; }
+  5%,10% {bottom: 15px; left: inherit; }
+  100% {bottom: -70px; left: inherit; }
 }
 
 /* Connection Icon and Tooltip */
